--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://jaybodra01:wQkljgA8Fx6OGGJ3@cluster0.fr7pk.mongodb.net/netflix_DB?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+JWT_SECRET=I_am_very_hungry_SECRET
+NODE_ENV= develoment
