--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "Backend/server.js",
   "scripts": {
-    "dev": "nodemon Backend/server.js"
+   "dev": "NODE_ENV=development nodemon Backend/server.js",
+		"start": "set NODE_ENV=production&& node Backend/server.js",
+		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
