--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "lucide-react": "^0.469.0",
+    "netflix-clone": "file:..",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
