--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "Backend/server.js",
   "scripts": {
-   "dev": "NODE_ENV=development nodemon Backend/server.js",
-		"start": "set NODE_ENV=production&& node Backend/server.js",
+   "dev": "nodemon Backend/server.js",
+		"start": "nodemon Backend/server.js",
 		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
